foundations/flex/06-flex-layout/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
  display: flex;
  flex-direction: column;
  height: 100vh;
  margin: 0;
  overflow: hidden;
  font-family: Roboto, sans-serif;
}

img {
  width: 600px;
}

button {
  font-family: Roboto, sans-serif;
  border: none;
  border-radius: 8px;
  background: #eee;
}

input {
  border: 1px solid #ddd;
  border-radius: 16px;
  padding: 8px 24px;
  width: 400px;
}

.content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  flex-grow: 1;
}

ul {
  display: flex;
  list-style: none;
    margin: 0px;
    padding: 0px;
}

ul a {
  text-decoration: none;
  color: gray;
}

.footer {
  display: flex;
  justify-content: space-between;
  align-items:
}

.header {
  display: flex;
  justify-content: space-between;
}

